--- a/package.json
+++ b/package.json
@@ -1,26 +1,24 @@
 {
-   "name": "form-server",
-   "version": "1.0.0",
-   "description": "",
-   "main": "src/index.ts",
-   "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "seed": "ts-node src/scripts/seed.ts",
-      "start": "ts-node src/index.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
-   },
-   "keywords": [],
-   "author": "",
-   "license": "ISC",
-   "dependencies": {
-      "express": "4.18.2",
-      "pg": "8.5.1",
-      "reflect-metadata": "0.1.13",
-      "typeorm": "0.3.15"
-   },
-   "devDependencies": {
-      "@types/node": "16.11.10",
-      "ts-node": "10.7.0",
-      "typescript": "4.5.2"
-   }
+  "name": "form-submission-server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "src/index.ts",
+  "scripts": {
+    "seed": "ts-node src/scripts/seed.ts",
+    "start": "ts-node src/index.ts"
+  },
+  "keywords": [],
+  "author": "Nilan Marktanner <nilan.marktanner@gmail.com>",
+  "license": "MIT",
+  "dependencies": {
+    "express": "4.18.2",
+    "pg": "8.5.1",
+    "reflect-metadata": "0.1.13",
+    "typeorm": "0.3.15"
+  },
+  "devDependencies": {
+    "@types/node": "16.11.10",
+    "ts-node": "10.7.0",
+    "typescript": "4.5.2"
+  }
 }
